# webkit-issue

./: .gitignore  LICENSE.txt  README.md  com.github.lalmeras.WebkitIssue.json  pyproject.toml
src/webkit_issue/: __about__.py  cli.py  webkit-issue
tests/: __init__.py
